--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <div class="calculadora">
             <h1>Calculadora de Guisos 🍲</h1>
-            <input type="number" placeholder="0" id="input">
-            <button id="boton">CALCULAR</button>
+            <input id="input"type="number" placeholder="0" >
+            <div id="boton">0</div>
             <script src="index.js"></script>
         </div>
     </body>
